--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.10",
+    "@clerk/clerk-react": "^5.24.1",
+    "@clerk/nextjs": "^6.12.3",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -19,21 +20,21 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
-    "@stream-io/node-sdk": "^0.4.9",
-    "@stream-io/video-react-sdk": "^1.10.0",
+    "@stream-io/node-sdk": "^0.4.16",
+    "@stream-io/video-react-sdk": "^1.12.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.18.2",
+    "convex": "^1.19.5",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.471.1",
-    "next": "14.2.23",
+    "next": "^15.2.1",
     "next-themes": "^0.4.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-resizable-panels": "^2.1.7",
-    "svix": "^1.45.1",
+    "svix": "^1.61.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
